--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ img{
  @media screen and (max-width: 768px){
      .nav__menu{
         position: fixed;
-        top: -100%;
+        top: -100%; 
         left: 0;
         width: 100%;
         padding-top: 1.5rem;
@@ -170,3 +170,66 @@ img{
  .show-menu{
      top: var(--header-height);
  }
+
+ .active-link{
+     position: relative;
+ }
+
+ .active-link::after{
+     content: '';
+     position: absolute;
+     bottom: -.7rem;
+     left: 0;
+     width: 65%;
+     height: 3px;
+     border-color: var(--first-color-light);
+ }
+
+ .scroll-header{
+     background-color: var(--first-color-lighten);
+     box-shadow: 0 2px 4px rgba(0, 0, 0,.1);
+ }
+
+ .scroll-header .nav__logo, .scroll-header .nav__toggle, .scroll-header .nav__link{
+     color: var(--first-color-dark);
+ }
+
+ .scroll-header .nav__menu{
+     background-color: var(--first-color-lighten);
+ }
+
+ .scrolltop{
+     position: fixed;
+     right: 1rem;
+     bottom: -20%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding: .5rem;
+     background-color: rgba(123, 111, 113, .7);
+     border-radius: .5rem;
+     z-index: var(--z-tooltip);
+     transition: .4s;
+     visibility: hidden;
+ }
+
+ .scrolltop__icon{
+     font-size: 2rem;
+     color: var(--first-color-lighten);
+ }
+
+ .show-scroll{
+     visibility: visible;
+     bottom: 1.5rem;
+
+ }
+
+ .home{
+     background-color: #000;
+     overflow: hidden;
+ }
+
+
+
+ 
+ 
