--- a/style.css
+++ b/style.css
@@ -229,7 +229,273 @@ img{
      overflow: hidden;
  }
 
+.home__container{
+    position: relative;
+    height: calc(100vh - var(--header-height));
+    grid-template-rows: repeat(2, max-content);
+    align-content: space-around;
+    row-gap: 2rem;
+}
+
+.home__data{
+    border-left: 4px solid var(--first-color-lighten);
+    color: var(--first-color-lighten);
+    padding-left: 1.5rem;
+    z-index: var(--z-tooltip);
+}
+
+.home__name{
+    font-size: var(--biggest-font-size);
+}
+
+.home__greeting, .home__profession{
+    display: block;
+    font-weight: var(--font-bold);
+}
+
+.home__greeting{
+    font-size: .813rem;
+}
+
+.home__profession{
+    font-size: .938rem;
+    margin-bottom: var(--mb-3);
+}
+
+.home__img{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+ 
+.home__img img{
+    width: 240px;
+}
+
+.home__social{
+    display: flex;
+    flex-direction: column;
+}
+ 
+.home__social-icon{
+    width: max-content;
+    font-size: 1.3rem;
+    margin-bottom: var(--mb-2);
+    color: var(--first-color-lighten);
+}
+
+.home__social-icon:hover{
+    color: var(--first-color-light);
+}
+
+.button{
+    display: inline-block;
+    border-color: var(--first-color);
+    color: var(--first-color-lighten);
+    padding: .75rem 1rem;
+    border-radius: .25rem;
+    transition: 3s;
+}
+
+.button:hover{
+    background-color: var(--first-color-dark);
+}
+
+.button-light{
+    background-color: var(--first-color-light);
+}
+
+.button-link{
+    background: none;
+    color: var(--first-color);
+    padding: 0;
+}
+
+.button-link:hover{
+    background: none;
+}
+
+/*------------------about----------------*/
+.about__data {
+    text-align: center;
+}
+
+.about__descroption {
+    font-size: var(--h2-font-size);
+    font-weight: var(--font-semi-bold);
+    color: var(--first-color);
+}
+.about__number {
+font-size: var(--h1-font-size);
+color: var(--first-color);
+display: block;
+}
+
+.about__img {
+justify-self: center;
+width: 320px;
+border-radius: .5rem;
+}
 
 
- 
- 
+/*---------qualif-------*/
+
+
+.qualification__container{
+    row-gap: 2.5rem;
+}
+
+.qualification__title{
+font-size: var(--h3-font-size);
+color: var(--first-color);
+margin-bottom: var(--mb-2);
+display: flex;
+align-items: center;
+}
+
+.qualification__title-icon{
+    font-size: 1.5rem;
+    margin-right: var(--mb-1);
+}
+
+.qualification__box{
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #CCC;
+}
+
+.qualification__area{
+    font-size: var(--normal-font-size);
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+    font-weight: var(--font-medium);
+}
+
+.qualification__icon, .qualification__work{
+    font-size: var(--normal-font-size);
+    color: var(--first-color-light);
+}
+
+.qualification__work{
+    display: block;
+}
+
+/*portfolio*/
+
+.portfolio__nav{
+    text-align: center;
+    margin-bottom: var(--mb-3);
+}
+
+.portfolio__item{
+    margin: 0 var(--mb-2);
+    cursor: pointer;
+}
+
+.portfolio__content{
+    border-color: #FFF;
+    border-radius: .5rem;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(174,190,205,.3);
+}
+
+.portfolio__img{
+    width: 100%;
+    transition: 4s;
+}
+
+.portfolio__data{
+    padding: 1.5rem;
+}
+
+.portfolio__subtitle{
+    font-size: var(--normal-font-size);
+    color: var(--first-color-light);
+}
+
+.portfolio__title{
+    font-size: var(--h3-font-size);
+    color: var(--first-color);
+    margin: var(--mb-2);
+}
+
+.portfolio__content:hover{
+    box-shadow: 0 6px 8px rgba(174,190,205,.4);
+}
+
+.portfolio__content:hover .portfolio__img{
+    transform: scale(1.02);
+}
+
+/*Contact*/
+.contact__container {
+    row-gap: 2.5rem;
+}
+
+.contact__content {
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+.contact__box {
+    background-color: #FFF;
+    border-radius: .5rem;
+    padding: 1.5rem;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(174,190,205,.3);
+}
+
+.contact__icon, .contact__title {
+    color: var(--first-color);
+}
+
+.contact__icon{
+    font-size: 2rem;
+}
+
+.contact__title{
+    font-size: var(--h3-font-size);
+    margin: var(--mb-1) 0;
+}
+
+.contact__box:hover{
+    box-shadow: 0 6px 8px rgba(174,190,205,.4);
+}
+
+/*footer*/
+
+.footer{
+    background-color: var(--first-color-dark);
+    color:var(--first-color-lighten);
+    text-align: center;
+}
+
+.footer__container{
+    padding: 3rem 0;
+}
+
+.footer__title{
+    font-size: var(--h1-font-size);
+    margin-bottom: var(--mb-1);
+    font-weight: var(--font-semi-bold);
+}
+
+.footer__decription{
+    margin-bottom: var(--mb-3);
+}
+
+.footer__social{
+    margin-bottom: var(--mb-6);
+}
+
+.footer__link{
+   font-size: 1.4rem;
+   color: var(--first-color-lighten);
+   margin: 0 var(--mb-1);
+   transition: .3s;
+}
+
+.footer__link:hover{
+    color: var(--first-color-light);
+}
+
+
+/*media*/
