--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 :root{
     --header-height: 3rem;
 
-    --first-color:#3e0e12;
+    --first-color:#291a0c;
     --first-color-dark:#2f0a0d;
     --text-color:#524748;
     --first-color-light:#7b6f71;
     --first-color-lighten:#fbf9f9;
 
     --body-font: 'Arial', sans-serif;
-    --biggest-font-size: 2.5;
+    --biggest-font-size: 2.5rem;
     --h1-font-size: 1.5rem;
     --h2-font-size: 1.25rem;
-    --h3-font-size: 1.125;
+    --h3-font-size: 1.125rem;
     --normal-font-size: .938rem;
 
     --font-medium: 500;
@@ -160,6 +160,10 @@ img{
 
  .nav__logo, .nav__toggle{
      color: var(--first-color-lighten);
+ }
+
+ .nav__logo{
+     font-size: 20px;
  }
 
  .nav__toggle{
@@ -320,7 +324,7 @@ img{
     text-align: center;
 }
 
-.about__descroption {
+.about__description {
     font-size: var(--h2-font-size);
     font-weight: var(--font-semi-bold);
     color: var(--first-color);
@@ -381,21 +385,13 @@ align-items: center;
 
 /*portfolio*/
 
-.portfolio__nav{
-    text-align: center;
-    margin-bottom: var(--mb-3);
-}
-
-.portfolio__item{
-    margin: 0 var(--mb-2);
-    cursor: pointer;
-}
 
 .portfolio__content{
     border-color: #FFF;
     border-radius: .5rem;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(174,190,205,.3);
+    
 }
 
 .portfolio__img{
@@ -408,12 +404,12 @@ align-items: center;
 }
 
 .portfolio__subtitle{
-    font-size: var(--normal-font-size);
+    font-size: 30px;
     color: var(--first-color-light);
 }
 
 .portfolio__title{
-    font-size: var(--h3-font-size);
+    font-size: 27px;
     color: var(--first-color);
     margin: var(--mb-2);
 }
@@ -423,7 +419,7 @@ align-items: center;
 }
 
 .portfolio__content:hover .portfolio__img{
-    transform: scale(1.02);
+    transform: scale(1.1);
 }
 
 /*Contact*/
@@ -499,3 +495,108 @@ align-items: center;
 
 
 /*media*/
+
+@media screen and (min-width: 576px){
+    .home__img img{
+        width: 330px;
+    }
+
+    .about__container,
+    .qualification__container,
+    .services__container{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+    
+}
+
+@media screen and (min-width: 768px){
+    body{
+        margin: 0;
+    }
+
+    .section{
+        padding-top: 6rem;
+    }
+
+    .section-title{
+        margin-bottom: var(--mb-5);
+    }
+
+    .nav{
+        height: calc(var(--header-height) + 1.5rem);
+    }
+
+    .nav__list{
+        display: flex;
+    }
+
+    .nav__item{
+        margin-left: var(--mb-5);
+        margin-bottom: 0;
+    }
+
+    .nav__toggle{
+        display: none;
+    }
+
+    .home__container{
+        height: 100vh;
+        grid-template-rows: max-content .5fr;
+        align-content: flex-end;
+    }
+
+    .home__greeting{
+        font-size: 1.25rem;
+    }
+
+    .home__profession{
+        font-size: 2rem;
+    }
+
+    .home__social{
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .home__social-icon{
+        margin-right: var(--mb-4);
+        margin-bottom: 0;
+    }
+
+    .home__img img{
+        width: 440px;
+    }
+
+    .about__description{
+        text-align: center;
+    }
+
+    .about__img{
+        width: 300px;
+    }
+
+    .qualification__box{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .services__container,
+    .portfolio__container{
+        grid-template-columns: repeat(3,1fr);
+    }
+
+}
+
+@media screen and (min-width: 1024px){
+    .bd-container{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .qualification__container{
+        column-gap: 6rem;
+    }
+
+
+}
